--- a/autostack/conf/compute/computenetwork/nova.conf
+++ b/autostack/conf/compute/computenetwork/nova.conf
@@ -17,7 +17,7 @@ enabled_apis=ec2,osapi_compute,metadata
 
 
 rpc_backend = rabbit
-rabbit_host = controller10
+rabbit_host = CONTROLLER_NODE_HOSTNAME
 rabbit_password = welcome
 
 auth_strategy = keystone
@@ -27,7 +27,7 @@ my_ip= 192.168.4.204
 vnc_enabled = True
 vncserver_listen = 0.0.0.0
 vncserver_proxyclient_address = 192.168.4.204
-novncproxy_base_url = http://controller10:6080/vnc_auto.html
+novncproxy_base_url = http://CONTROLLER_NODE_HOSTNAME:6080/vnc_auto.html
 
 
 
@@ -39,8 +39,8 @@ firewall_driver = nova.virt.firewall.NoopFirewallDriver
 
 [keystone_authtoken]
 
-auth_uri = http://controller10:5000/v2.0
-identity_uri = http://controller10:35357
+auth_uri = http://CONTROLLER_NODE_HOSTNAME:5000/v2.0
+identity_uri = http://CONTROLLER_NODE_HOSTNAME:35357
 admin_tenant_name = service
 admin_user = nova
 admin_password = welcome
@@ -51,15 +51,15 @@ admin_password = welcome
 
 [glance]
 
-host = controller10
+host = CONTROLLER_NODE_HOSTNAME
 
 
 
 [neutron]
 
-url = http://controller10:9696
+url = http://CONTROLLER_NODE_HOSTNAME:9696
 auth_strategy = keystone
-admin_auth_url = http://controller10:35357/v2.0
+admin_auth_url = http://CONTROLLER_NODE_HOSTNAME:35357/v2.0
 admin_tenant_name = service
 admin_username = neutron
 admin_password = welcome
