--- a/autostack/conf/compute/neutron.conf
+++ b/autostack/conf/compute/neutron.conf
@@ -5,7 +5,7 @@
 # Print debugging output (set logging level to DEBUG instead of default WARNING level).
 # debug = False
 #rpc_backend = rabbit
-rabbit_host = controller10
+rabbit_host = CONTROLLER_NODE_HOSTNAME
 rabbit_password = welcome
 
 auth_strategy = keystone
@@ -430,8 +430,8 @@ root_helper = sudo /usr/bin/neutron-rootwrap /etc/neutron/rootwrap.conf
 #admin_password = %SERVICE_PASSWORD%
 #signing_dir = $state_path/keystone-signing
 
-auth_uri = http://controller10:5000/v2.0
-identity_uri = http://controller10:35357
+auth_uri = http://CONTROLLER_NODE_HOSTNAME:5000/v2.0
+identity_uri = http://CONTROLLER_NODE_HOSTNAME:35357
 admin_tenant_name = service
 admin_user = neutron
 admin_password = welcome
