--- a/autostack/conf/controller/glance-api.conf
+++ b/autostack/conf/controller/glance-api.conf
@@ -1,7 +1,7 @@
 [DEFAULT]
 # Show more verbose log output (sets INFO log level output)
 #verbose = False
-notification_driver = noop
+
 # Show debugging output in logs (sets DEBUG log level output)
 #debug = False
 
@@ -10,7 +10,7 @@ notification_driver = noop
 # by the known_stores option below.
 # Default: 'file'
 default_store = file
-
+notification_driver = noop
 # Maximum image size (in bytes) that may be uploaded through the
 # Glance API server. Defaults to 1 TB.
 # WARNING: this value should only be increased after careful consideration
@@ -19,7 +19,7 @@ default_store = file
 
 # Address to bind the API server
 bind_host = 0.0.0.0
-verbose = True
+
 # Port the bind the API server to
 bind_port = 9292
 
@@ -40,7 +40,7 @@ backlog = 4096
 # API to use for accessing data. Default value points to sqlalchemy
 # package, it is also possible to use: glance.db.registry.api
 # data_api = glance.db.sqlalchemy.api
-
+verbose = True
 # The number of child process workers that will be
 # created to service API requests. The default will be
 # equal to the number of CPUs available. (integer value)
@@ -220,8 +220,8 @@ registry_client_protocol = http
 rabbit_host = localhost
 rabbit_port = 5672
 rabbit_use_ssl = false
-rabbit_userid = guest
-rabbit_password = guest
+rabbit_userid = RABBIT_PASS
+rabbit_password = RABBIT_PASS
 rabbit_virtual_host = /
 rabbit_notification_exchange = glance
 rabbit_notification_topic = notifications
@@ -286,8 +286,8 @@ image_cache_dir = /var/lib/glance/image-cache/
 
 [database]
 # The file name to use with SQLite (string value)
-sqlite_db = /var/lib/glance/glance.sqlite
-connection = mysql://glance:welcome@controller10/glance
+#sqlite_db = /var/lib/glance/glance.sqlite
+connection = mysql://glance:welcome@CONTROLLER_NODE_HOSTNAME/glance
 # If True, SQLite uses synchronous mode (boolean value)
 #sqlite_synchronous = True
 
@@ -385,16 +385,13 @@ backend = sqlalchemy
 #admin_tenant_name = %SERVICE_TENANT_NAME%
 #admin_user = %SERVICE_USER%
 #admin_password = %SERVICE_PASSWORD%
+#revocation_cache_time = 10
 
-
-
-auth_uri = http://controller10:5000/v2.0
-identity_uri = http://controller10:35357
+auth_uri = http://CONTROLLER_NODE_HOSTNAME:5000/v2.0
+identity_uri = http://CONTROLLER_NODE_HOSTNAME:35357
 admin_tenant_name = service
 admin_user = glance
 admin_password = welcome
-revocation_cache_time = 10
-
 
 
 
@@ -408,9 +405,6 @@ revocation_cache_time = 10
 # as 'keystone'.
 #flavor=
 flavor = keystone
-
-
-
 [store_type_location_strategy]
 # The scheme list to use to get store preference order. The scheme must be
 # registered by one of the stores defined by the 'known_stores' config option.
@@ -459,8 +453,10 @@ flavor = keystone
 
 # Directory that the Filesystem backend store
 # writes image data to
+#filesystem_store_datadir = /var/lib/glance/images/
 default_store = file
 filesystem_store_datadir = /var/lib/glance/images/
+
 
 # A list of directories where image data can be stored.
 # This option may be specified multiple times for specifying multiple store
