--- a/autostack/conf/controller/glance-registry.conf
+++ b/autostack/conf/controller/glance-registry.conf
@@ -17,11 +17,10 @@ bind_port = 9191
 # If `log_file` is omitted and `use_syslog` is false, then log messages are
 # sent to stdout as a fallback.
 log_file = /var/log/glance/registry.log
-
+verbose = True
 # Backlog requests when creating socket
 backlog = 4096
-notification_driver = noop
-verbose = True
+
 # TCP_KEEPIDLE value in seconds when creating socket.
 # Not supported on OS X.
 #tcp_keepidle = 600
@@ -96,8 +95,8 @@ limit_param_default = 25
 rabbit_host = localhost
 rabbit_port = 5672
 rabbit_use_ssl = false
-rabbit_userid = guest
-rabbit_password = guest
+rabbit_userid = RABBIT_PASS
+rabbit_password = RABBIT_PASS
 rabbit_virtual_host = /
 rabbit_notification_exchange = glance
 rabbit_notification_topic = notifications
@@ -122,13 +121,13 @@ qpid_heartbeat = 5
 qpid_protocol = tcp
 qpid_tcp_nodelay = True
 
-
+notification_driver = noop
 # ================= Database Options ==========================
 
 [database]
 # The file name to use with SQLite (string value)
-sqlite_db = /var/lib/glance/glance.sqlite
-connection = mysql://glance:welcome@controller10/glance
+#sqlite_db = /var/lib/glance/glance.sqlite
+connection = mysql://glance:welcome@CONTROLLER_NODE_HOSTNAME/glance
 # If True, SQLite uses synchronous mode (boolean value)
 #sqlite_synchronous = True
 
@@ -228,19 +227,11 @@ backend = sqlalchemy
 #admin_password = %SERVICE_PASSWORD%
 
 
-
-auth_uri = http://controller10:5000/v2.0
-identity_uri = http://controller10:35357
+auth_uri = http://CONTROLLER_NODE_HOSTNAME:5000/v2.0
+identity_uri = http://CONTROLLER_NODE_HOSTNAME:35357
 admin_tenant_name = service
 admin_user = glance
 admin_password = welcome
-
-
-
-
-
-
-
 
 
 [paste_deploy]
