--- a/autostack/conf/controller/neutron.conf
+++ b/autostack/conf/controller/neutron.conf
@@ -1,29 +1,15 @@
 [DEFAULT]
 # Print more verbose output (set logging level to INFO instead of default WARNING level).
+verbose = True
+
 # verbose = False
-
-
 rpc_backend = rabbit
-rabbit_host = controller10
-rabbit_password = welcome
+rabbit_host = CONTROLLER_NODE_HOSTNAME
+rabbit_password = RABBIT_PASS
+
 
 auth_strategy = keystone
-
-core_plugin = ml2
-service_plugins = router
-allow_overlapping_ips = True
-
-notify_nova_on_port_status_changes = True
-notify_nova_on_port_data_changes = True
-nova_url = http://controller10:8774/v2
-nova_admin_auth_url = http://controller10:35357/v2.0
-nova_region_name = regionOne
-nova_admin_username = nova
-nova_admin_tenant_id = 7d0753ad61814eb99d6834221ab7a633
-nova_admin_password = welcome
-
-verbose = True
-b =========Start Global Config Option for Distributed L3 Router===============
+# =========Start Global Config Option for Distributed L3 Router===============
 # Setting the "router_distributed" flag to "True" will default to the creation
 # of distributed tenant routers. The admin can override this flag by specifying
 # the type of the router on the create request (admin-only attribute). Default
@@ -89,9 +75,25 @@ core_plugin = ml2
 # the plugins included in the neutron source distribution. For compatibility
 # with previous versions, the class name of a plugin can be specified instead
 # of its entrypoint name.
-#
+service_plugins = router
 # service_plugins =
 # Example: service_plugins = router,firewall,lbaas,vpnaas,metering
+
+
+
+
+
+notify_nova_on_port_status_changes = True
+notify_nova_on_port_data_changes = True
+nova_url = http://CONTROLLER_NODE_HOSTNAME:8774/v2
+nova_admin_auth_url = http://CONTROLLER_NODE_HOSTNAME:35357/v2.0
+nova_region_name = regionOne
+nova_admin_username = nova
+nova_admin_tenant_id = 4cb1a60a652f4a718d9cb1d0016f9c88
+nova_admin_password = welcome
+
+
+
 
 # Paste configuration file
 # api_paste_config = api-paste.ini
@@ -135,6 +137,9 @@ core_plugin = ml2
 # Enable or disable overlapping IPs for subnets
 # Attention: the following parameter MUST be set to False if Neutron is
 # being used in conjunction with nova security groups
+
+
+allow_overlapping_ips = True
 # allow_overlapping_ips = False
 # Ensure that configured gateway is on subnet. For IPv6, validate only if
 # gateway is not a link local address. Deprecated, to be removed during the
@@ -386,10 +391,10 @@ core_plugin = ml2
 #rabbit_use_ssl=false
 
 # The RabbitMQ userid. (string value)
-#rabbit_userid=guest
+#rabbit_userid=RABBIT_PASS
 
 # The RabbitMQ password. (string value)
-#rabbit_password=guest
+#rabbit_password=RABBIT_PASS
 
 # the RabbitMQ login method (string value)
 #rabbit_login_method=AMQPLAIN
@@ -592,15 +597,11 @@ root_helper = sudo /usr/bin/neutron-rootwrap /etc/neutron/rootwrap.conf
 #admin_tenant_name = %SERVICE_TENANT_NAME%
 #admin_user = %SERVICE_USER%
 #admin_password = %SERVICE_PASSWORD%
-
-
-
-auth_uri = http://controller10:5000/v2.0
-identity_uri = http://controller10:35357
+auth_uri = http://CONTROLLER_NODE_HOSTNAME:5000/v2.0
+identity_uri = http://CONTROLLER_NODE_HOSTNAME:35357
 admin_tenant_name = service
 admin_user = neutron
 admin_password = welcome
-
 
 
 [database]
@@ -609,10 +610,10 @@ admin_password = welcome
 # connection = mysql://root:pass@127.0.0.1:3306/neutron
 # Replace 127.0.0.1 above with the IP address of the database used by the
 # main neutron server. (Leave it as is if the database runs on this host.)
-connection = sqlite:////var/lib/neutron/neutron.sqlite
+#connection = sqlite:////var/lib/neutron/neutron.sqlite
 
 
-connection = mysql://neutron:welcome@controller10/neutron
+connection = mysql://neutron:welcome@CONTROLLER_NODE_HOSTNAME/neutron
 
 # NOTE: In deployment the [database] section and its connection attribute may
 # be set in the corresponding core plugin '.ini' file. However, it is suggested
