--- a/autostack/conf/network/metadata_agent.ini
+++ b/autostack/conf/network/metadata_agent.ini
@@ -15,13 +15,13 @@
 
 
 
-auth_url = http://controller10:5000/v2.0
+auth_url = http://CONTROLLER_NODE_HOSTNAME:5000/v2.0
 auth_region = regionOne
 admin_tenant_name = service
 admin_user = neutron
 admin_password = welcome
 
-nova_metadata_ip = controller10
+nova_metadata_ip = CONTROLLER_NODE_HOSTNAME
 
 metadata_proxy_shared_secret = welcome
 
