--- a/autostack/conf/controller/mariadb/my.cnf
+++ b/autostack/conf/controller/mariadb/my.cnf
@@ -32,12 +32,6 @@ nice		= 0
 #
 # * Basic Settings
 #
-
-bind-address = 192.168.4.201
-
-
-
-
 user		= mysql
 pid-file	= /var/run/mysqld/mysqld.pid
 socket		= /var/run/mysqld/mysqld.sock
@@ -47,7 +41,12 @@ datadir		= /var/lib/mysql
 tmpdir		= /tmp
 lc-messages-dir	= /usr/share/mysql
 skip-external-locking
+#
+# Instead of skip-networking the default is now to listen only on
+# localhost which is more compatible and is not less secure.
+#bind-address		= 127.0.0.1
 
+bind-address            = CONTROLLER_NODE_PUBLIC_IP
 
 default-storage-engine = innodb
 innodb_file_per_table
@@ -56,10 +55,6 @@ init-connect = 'SET NAMES utf8'
 character-set-server = utf8
 
 
-#
-# Instead of skip-networking the default is now to listen only on
-# localhost which is more compatible and is not less secure.
-#bind-address		= 127.0.0.1
 #
 # * Fine Tuning
 #
