--- a/autostack/conf/controller/nova.conf
+++ b/autostack/conf/controller/nova.conf
@@ -11,19 +11,16 @@ ec2_private_dns_show_ip=True
 api_paste_config=/etc/nova/api-paste.ini
 enabled_apis=ec2,osapi_compute,metadata
 
-
 rpc_backend = rabbit
-rabbit_host = controller10
-rabbit_password = welcome
+rabbit_host = CONTROLLER_NODE_HOSTNAME
+rabbit_password = RABBIT_PASS
 
 auth_strategy = keystone
 
-my_ip = 192.168.4.201
+my_ip = CONTROLLER_NODE_PUBLIC_IP
 
-vncserver_listen = 192.168.4.201
-vncserver_proxyclient_address = 192.168.4.201
-
-
+vncserver_listen = CONTROLLER_NODE_PUBLIC_IP
+vncserver_proxyclient_address = CONTROLLER_NODE_PUBLIC_IP
 
 
 network_api_class = nova.network.neutronv2.api.API
@@ -32,14 +29,17 @@ linuxnet_interface_driver = nova.network.linux_net.LinuxOVSInterfaceDriver
 firewall_driver = nova.virt.firewall.NoopFirewallDriver
 
 
+
+
+
 [database]
 
-connection = mysql://nova:welcome@controller10/nova
-
+connection = mysql://nova:welcome@CONTROLLER_NODE_HOSTNAME/nova
 
 [keystone_authtoken]
-auth_uri = http://controller10:5000/v2.0
-identity_uri = http://controller10:35357
+
+auth_uri = http://CONTROLLER_NODE_HOSTNAME:5000/v2.0
+identity_uri = http://CONTROLLER_NODE_HOSTNAME:35357
 admin_tenant_name = service
 admin_user = nova
 admin_password = welcome
@@ -47,5 +47,17 @@ admin_password = welcome
 
 [glance]
 
-host = controller10
+host = CONTROLLER_NODE_HOSTNAME
 
+
+[neutron]
+
+url = http://CONTROLLER_NODE_HOSTNAME:9696
+auth_strategy = keystone
+admin_auth_url = http://CONTROLLER_NODE_HOSTNAME:35357/v2.0
+admin_tenant_name = service
+admin_username = neutron
+admin_password = welcome
+
+service_metadata_proxy = True
+metadata_proxy_shared_secret = iamrishi
