--- a/autostack/conf/controller/ntp.conf
+++ b/autostack/conf/controller/ntp.conf
@@ -12,8 +12,6 @@ server CONTROLLER_NODE_HOSTNAME iburst
 restrict -4 default kod notrap nomodify
 restrict -6 default kod notrap nomodify
 
-
-
 statistics loopstats peerstats clockstats
 filegen loopstats file loopstats type day enable
 filegen peerstats file peerstats type day enable
@@ -25,25 +23,15 @@ filegen clockstats file clockstats type day enable
 # on 2011-02-08 (LP: #104525). See http://www.pool.ntp.org/join.html for
 # more information.
 server 0.ubuntu.pool.ntp.org
-server 1.ubuntu.pool.ntp.org
-server 2.ubuntu.pool.ntp.org
-server 3.ubuntu.pool.ntp.org
+#server 1.ubuntu.pool.ntp.org
+#server 2.ubuntu.pool.ntp.org
+#server 3.ubuntu.pool.ntp.org
 
 # Use Ubuntu's ntp server as a fallback.
-server ntp.ubuntu.com
+#server ntp.ubuntu.com
 
 # Access control configuration; see /usr/share/doc/ntp-doc/html/accopt.html for
-# details.  The web page <http://support.ntp.org/bin/view/Support/AccessRestrictions>
-# might also be helpful.
 #
-# Note that "restrict" applies to both servers and clients, so a configuration
-# that might be intended to block requests from certain clients could also end
-# up blocking replies from your own upstream servers.
-
-# By default, exchange time with everybody, but don't allow configuration.
-#restrict -4 default kod notrap nomodify nopeer noquery
-#restrict -6 default kod notrap nomodify nopeer noquery
-
 # Local users may interrogate the ntp server more closely.
 restrict 127.0.0.1
 restrict ::1
