--- a/autostack/conf/network/neutron.conf
+++ b/autostack/conf/network/neutron.conf
@@ -2,7 +2,7 @@
 
 
 rpc_backend = rabbit
-rabbit_host = controller10
+rabbit_host = CONTROLLER_NODE_HOSTNAME
 rabbit_password = welcome
 # Print more verbose output (set logging level to INFO instead of default WARNING level).
 # verbose = False
@@ -579,8 +579,8 @@ root_helper = sudo /usr/bin/neutron-rootwrap /etc/neutron/rootwrap.conf
 #admin_tenant_name = %SERVICE_TENANT_NAME%
 #admin_user = %SERVICE_USER%
 #admin_password = %SERVICE_PASSWORD%
-auth_uri = http://controller10:5000/v2.0
-identity_uri = http://controller10:35357
+auth_uri = http://CONTROLLER_NODE_HOSTNAME:5000/v2.0
+identity_uri = http://CONTROLLER_NODE_HOSTNAME:35357
 admin_tenant_name = service
 admin_user = neutron
 admin_password = welcome
