--- a/autostack/conf/controller/keystone.conf
+++ b/autostack/conf/controller/keystone.conf
@@ -630,7 +630,7 @@ log_dir=/var/log/keystone
 # Deprecated group/name - [DATABASE]/sql_connection
 # Deprecated group/name - [sql]/connection
 #connection=sqlite:////var/lib/keystone/keystone.db
-connection = mysql://keystone:welcome@CONTROLLER_NODE_HOSTNAME/keystone
+connection = mysql://keystone:KEYSTONE_DBPASS@CONTROLLER_NODE_HOSTNAME/keystone
 # The SQLAlchemy connection string to use to connect to the
 # slave database. (string value)
 #slave_connection=<None>
