--- a/autostack/conf/controller/neutron.conf
+++ b/autostack/conf/controller/neutron.conf
@@ -89,8 +89,8 @@ nova_url = http://CONTROLLER_NODE_HOSTNAME:8774/v2
 nova_admin_auth_url = http://CONTROLLER_NODE_HOSTNAME:35357/v2.0
 nova_region_name = regionOne
 nova_admin_username = nova
-nova_admin_tenant_id = 4cb1a60a652f4a718d9cb1d0016f9c88
-nova_admin_password = welcome
+nova_admin_tenant_id = SERVICE_TENANT_ID
+nova_admin_password = NOVA_PASS
 
 
 
@@ -601,7 +601,7 @@ auth_uri = http://CONTROLLER_NODE_HOSTNAME:5000/v2.0
 identity_uri = http://CONTROLLER_NODE_HOSTNAME:35357
 admin_tenant_name = service
 admin_user = neutron
-admin_password = welcome
+admin_password = NEUTRON_PASS
 
 
 [database]
@@ -613,7 +613,7 @@ admin_password = welcome
 #connection = sqlite:////var/lib/neutron/neutron.sqlite
 
 
-connection = mysql://neutron:welcome@CONTROLLER_NODE_HOSTNAME/neutron
+connection = mysql://neutron:NEUTRON_DBPASS@CONTROLLER_NODE_HOSTNAME/neutron
 
 # NOTE: In deployment the [database] section and its connection attribute may
 # be set in the corresponding core plugin '.ini' file. However, it is suggested
