--- a/autostack/conf/controller/nova.conf
+++ b/autostack/conf/controller/nova.conf
@@ -23,18 +23,9 @@ vncserver_listen = CONTROLLER_NODE_PUBLIC_IP
 vncserver_proxyclient_address = CONTROLLER_NODE_PUBLIC_IP
 
 
-network_api_class = nova.network.neutronv2.api.API
-security_group_api = neutron
-linuxnet_interface_driver = nova.network.linux_net.LinuxOVSInterfaceDriver
-firewall_driver = nova.virt.firewall.NoopFirewallDriver
-
-
-
-
-
 [database]
 
-connection = mysql://nova:welcome@CONTROLLER_NODE_HOSTNAME/nova
+connection = mysql://nova:NOVA_DBPASS@CONTROLLER_NODE_HOSTNAME/nova
 
 [keystone_authtoken]
 
@@ -42,7 +33,7 @@ auth_uri = http://CONTROLLER_NODE_HOSTNAME:5000/v2.0
 identity_uri = http://CONTROLLER_NODE_HOSTNAME:35357
 admin_tenant_name = service
 admin_user = nova
-admin_password = welcome
+admin_password = NOVA_PASS
 
 
 [glance]
@@ -50,14 +41,4 @@ admin_password = welcome
 host = CONTROLLER_NODE_HOSTNAME
 
 
-[neutron]
 
-url = http://CONTROLLER_NODE_HOSTNAME:9696
-auth_strategy = keystone
-admin_auth_url = http://CONTROLLER_NODE_HOSTNAME:35357/v2.0
-admin_tenant_name = service
-admin_username = neutron
-admin_password = welcome
-
-service_metadata_proxy = True
-metadata_proxy_shared_secret = iamrishi
