--- a/autostack/conf/controller/glance-api.conf
+++ b/autostack/conf/controller/glance-api.conf
@@ -287,7 +287,7 @@ image_cache_dir = /var/lib/glance/image-cache/
 [database]
 # The file name to use with SQLite (string value)
 #sqlite_db = /var/lib/glance/glance.sqlite
-connection = mysql://glance:welcome@CONTROLLER_NODE_HOSTNAME/glance
+connection = mysql://glance:GLANCE_DBPASS@CONTROLLER_NODE_HOSTNAME/glance
 # If True, SQLite uses synchronous mode (boolean value)
 #sqlite_synchronous = True
 
@@ -391,7 +391,7 @@ auth_uri = http://CONTROLLER_NODE_HOSTNAME:5000/v2.0
 identity_uri = http://CONTROLLER_NODE_HOSTNAME:35357
 admin_tenant_name = service
 admin_user = glance
-admin_password = welcome
+admin_password = GLANCE_PASS
 
 
 
