--- a/autostack/conf/compute/ml2_conf.ini
+++ b/autostack/conf/compute/ml2_conf.ini
@@ -1,20 +1,16 @@
-
 [agent]
 
 tunnel_types = gre
 
 [ml2]
-
-
-type_drivers = flat,gre
-tenant_network_types = gre
-mechanism_drivers = openvswitch
 # (ListOpt) List of network type driver entrypoints to be loaded from
 # the neutron.ml2.type_drivers namespace.
 #
 # type_drivers = local,flat,vlan,gre,vxlan
 # Example: type_drivers = flat,vlan,gre,vxlan
-
+type_drivers = flat,gre
+tenant_network_types = gre
+mechanism_drivers = openvswitch
 # (ListOpt) Ordered list of network_types to allocate as tenant
 # networks. The default value 'local' is useful for single-box testing
 # but provides no connectivity between hosts.
@@ -30,6 +26,11 @@ mechanism_drivers = openvswitch
 # Example: mechanism_drivers = cisco,logger
 # Example: mechanism_drivers = openvswitch,brocade
 # Example: mechanism_drivers = linuxbridge,brocade
+
+# (ListOpt) Ordered list of extension driver entrypoints
+# to be loaded from the neutron.ml2.extension_drivers namespace.
+# extension_drivers =
+# Example: extension_drivers = anewextensiondriver
 
 [ml2_type_flat]
 # (ListOpt) List of physical_network names with which flat networks
@@ -53,7 +54,7 @@ mechanism_drivers = openvswitch
 # (ListOpt) Comma-separated list of <tun_min>:<tun_max> tuples enumerating ranges of GRE tunnel IDs that are available for tenant network allocation
 # tunnel_id_ranges =
 tunnel_id_ranges = 1:1000
-
+#tunnel_id_ranges = 1:1000tunnel_id_ranges = 1:1000
 [ml2_type_vxlan]
 # (ListOpt) Comma-separated list of <vni_min>:<vni_max> tuples enumerating
 # ranges of VXLAN VNI IDs that are available for tenant network allocation.
@@ -66,15 +67,10 @@ tunnel_id_ranges = 1:1000
 #
 # vxlan_group =
 # Example: vxlan_group = 239.1.1.1
-
-
 [ovs]
 
 local_ip = 192.168.100.204
 enable_tunneling = True
-
-
-
 
 [securitygroup]
 # Controls if neutron security group is enabled or not.
@@ -83,4 +79,6 @@ enable_tunneling = True
 enable_security_group = True
 enable_ipset = True
 firewall_driver = neutron.agent.linux.iptables_firewall.OVSHybridIptablesFirewallDriver
-
+# Use ipset to speed-up the iptables security groups. Enabling ipset support
+# requires that ipset is installed on L2 agent node.
+# enable_ipset = True
