--- a/autostack/conf/compute/computenetwork/nova.conf
+++ b/autostack/conf/compute/computenetwork/nova.conf
@@ -5,37 +5,35 @@ logdir=/var/log/nova
 state_path=/var/lib/nova
 lock_path=/var/lock/nova
 force_dhcp_release=True
-iscsi_helper=tgtadm
 libvirt_use_virtio_for_bridges=True
-connection_type=libvirt
-root_helper=sudo nova-rootwrap /etc/nova/rootwrap.conf
 verbose=True
 ec2_private_dns_show_ip=True
 api_paste_config=/etc/nova/api-paste.ini
-volumes_path=/var/lib/nova/volumes
 enabled_apis=ec2,osapi_compute,metadata
 
 
 rpc_backend = rabbit
 rabbit_host = CONTROLLER_NODE_HOSTNAME
-rabbit_password = welcome
+rabbit_password = guest
 
 auth_strategy = keystone
 
-my_ip= 192.168.4.204
+my_ip = 192.168.4.204
+
 
 vnc_enabled = True
 vncserver_listen = 0.0.0.0
 vncserver_proxyclient_address = 192.168.4.204
-novncproxy_base_url = http://CONTROLLER_NODE_HOSTNAME:6080/vnc_auto.html
-
-
+novncproxy_base_url = http://192.168.4.201:6080/vnc_auto.html
 
 network_api_class = nova.network.neutronv2.api.API
 security_group_api = neutron
 linuxnet_interface_driver = nova.network.linux_net.LinuxOVSInterfaceDriver
 firewall_driver = nova.virt.firewall.NoopFirewallDriver
 
+[glance]
+
+host = CONTROLLER_NODE_HOSTNAME
 
 [keystone_authtoken]
 
@@ -44,14 +42,6 @@ identity_uri = http://CONTROLLER_NODE_HOSTNAME:35357
 admin_tenant_name = service
 admin_user = nova
 admin_password = welcome
-
-
-
-
-
-[glance]
-
-host = CONTROLLER_NODE_HOSTNAME
 
 
 
