--- a/autostack/scripts/autostack.properties
+++ b/autostack/scripts/autostack.properties
@@ -30,6 +30,8 @@ NETWORK_GATEWAY_PRIVATE_INTERFACE=
 
 NETWORK_EXTERNAL_INTERFACE_NAME=
 
+DATABASE_PASSWORD=
+
 RABBIT_PASS=
 KEYSTONE_DBPASS=welcome
 DEMO_PASS=
