--- a/autostack/conf/compute/ml2_conf.ini
+++ b/autostack/conf/compute/ml2_conf.ini
@@ -69,7 +69,7 @@ tunnel_id_ranges = 1:1000
 # Example: vxlan_group = 239.1.1.1
 [ovs]
 
-local_ip = 192.168.100.204
+local_ip = COMPUTE_NODE_PRIVATE_IP
 enable_tunneling = True
 
 [securitygroup]
