--- a/autostack/conf/compute/neutron.conf
+++ b/autostack/conf/compute/neutron.conf
@@ -5,7 +5,7 @@ verbose = True
 # verbose = False
 rpc_backend = rabbit
 rabbit_host = CONTROLLER_NODE_HOSTNAME
-rabbit_password = guest
+rabbit_password = RABBIT_PASS
 # =========Start Global Config Option for Distributed L3 Router===============
 # Setting the "router_distributed" flag to "True" will default to the creation
 # of distributed tenant routers. The admin can override this flag by specifying
@@ -371,10 +371,10 @@ auth_strategy = keystone
 #rabbit_use_ssl=false
 
 # The RabbitMQ userid. (string value)
-#rabbit_userid=guest
+#rabbit_userid=RABBIT_PASS
 
 # The RabbitMQ password. (string value)
-#rabbit_password=guest
+#rabbit_password=RABBIT_PASS
 
 # the RabbitMQ login method (string value)
 #rabbit_login_method=AMQPLAIN
@@ -581,7 +581,7 @@ auth_uri = http://CONTROLLER_NODE_HOSTNAME:5000/v2.0
 identity_uri = http://CONTROLLER_NODE_HOSTNAME:35357
 admin_tenant_name = service
 admin_user = neutron
-admin_password = welcome
+admin_password = NEUTRON_PASS
 
 
 
@@ -591,7 +591,7 @@ admin_password = welcome
 # connection = mysql://root:pass@127.0.0.1:3306/neutron
 # Replace 127.0.0.1 above with the IP address of the database used by the
 # main neutron server. (Leave it as is if the database runs on this host.)
-connection = sqlite:////var/lib/neutron/neutron.sqlite
+#connection = sqlite:////var/lib/neutron/neutron.sqlite
 # NOTE: In deployment the [database] section and its connection attribute may
 # be set in the corresponding core plugin '.ini' file. However, it is suggested
 # to put the [database] section and its connection attribute in this
