--- a/autostack/conf/compute/nova.conf
+++ b/autostack/conf/compute/nova.conf
@@ -14,22 +14,18 @@ enabled_apis=ec2,osapi_compute,metadata
 
 rpc_backend = rabbit
 rabbit_host = CONTROLLER_NODE_HOSTNAME
-rabbit_password = guest
+rabbit_password = RABBIT_PASS
 
 auth_strategy = keystone
 
-my_ip = 192.168.4.204
+my_ip = COMPUTE_NODE_PUBLIC_IP
 
 
 vnc_enabled = True
 vncserver_listen = 0.0.0.0
-vncserver_proxyclient_address = 192.168.4.204
-novncproxy_base_url = http://192.168.4.201:6080/vnc_auto.html
+vncserver_proxyclient_address = COMPUTE_NODE_PUBLIC_IP
+novncproxy_base_url = http://CONTROLLER_NODE_PUBLIC_IP:6080/vnc_auto.html
 
-network_api_class = nova.network.neutronv2.api.API
-security_group_api = neutron
-linuxnet_interface_driver = nova.network.linux_net.LinuxOVSInterfaceDriver
-firewall_driver = nova.virt.firewall.NoopFirewallDriver
 
 [glance]
 
@@ -41,15 +37,7 @@ auth_uri = http://CONTROLLER_NODE_HOSTNAME:5000/v2.0
 identity_uri = http://CONTROLLER_NODE_HOSTNAME:35357
 admin_tenant_name = service
 admin_user = nova
-admin_password = welcome
+admin_password = NOVA_PASS
 
 
 
-[neutron]
-
-url = http://CONTROLLER_NODE_HOSTNAME:9696
-auth_strategy = keystone
-admin_auth_url = http://CONTROLLER_NODE_HOSTNAME:35357/v2.0
-admin_tenant_name = service
-admin_username = neutron
-admin_password = welcome
