--- a/autostack/autostack.properties
+++ b/autostack/autostack.properties
@@ -1,55 +1,60 @@
-ACCOUNT_USERNAME=
-ACCOUNT_PASSWORD=
+#This is a proprty file.
+# Do not leave space after = sign
+# wrong : ACCOUNT_USERNAME= rishi    [No SPACE after = sign]
+# RIGHT : ACCOUNT_USERNAME=rishi
 
-NAMESERVER_IP=
 
-CONTROLLER_NODE_HOSTNAME=
-CONTROLLER_NODE_PUBLIC_IP=
-CONTROLLER_NODE_PRIVATE_IP=
 
-NETWORK_NODE_HOSTNAME=
-NETWORK_NODE_PUBLIC_IP=
-NETWORK_NODE_PRIVATE_IP=
 
-COMPUTE_NODE_HOSTNAME=
-COMPUTE_NODE_PUBLIC_IP=
-COMPUTE_NODE_PRIVATE_IP=
+ACCOUNT_USERNAME=rishi
+ACCOUNT_PASSWORD=9934
 
-NETWORK_PUBLIC_INTERFACE_NAME=rishi
-NETWORK_NETMASK_PUBLIC_INTERFACE=
-NETWORK_NETWORK_PUBLIC_INTERFACE=
-NETWORK_BROADCAST_PUBLIC_INTERFACE=
-NETWORK_GATEWAY_PUBLIC_INTERFACE=
+NAMESERVER_IP=192.168.4.1
 
-NETWORK_PRIVATE_INTERFACE_NAME=
-NETWORK_NETMASK_PRIVATE_INTERFACE=
-NETWORK_NETWORK_PRIVATE_INTERFACE=
-NETWORK_BROADCAST_PRIVATE_INTERFACE=
-NETWORK_GATEWAY_PRIVATE_INTERFACE=
+CONTROLLER_NODE_HOSTNAME=controller101
+CONTROLLER_NODE_PUBLIC_IP=192.168.4.190
+CONTROLLER_NODE_PRIVATE_IP=192.168.100.190
 
-NETWORK_EXTERNAL_INTERFACE_NAME=
+NETWORK_NODE_HOSTNAME=network101
+NETWORK_NODE_PUBLIC_IP=192.168.4.191
+NETWORK_NODE_PRIVATE_IP=192.168.100.191
 
-# Write any random string for METADATA_SECRET
-METADATA_SECRET=
+COMPUTE_NODE_HOSTNAME=compute101
+COMPUTE_NODE_PUBLIC_IP=192.168.4.192
+COMPUTE_NODE_PRIVATE_IP=192.168.100.192
 
-DATABASE_PASSWORD=
 
-RABBIT_PASS=
+NETWORK_PUBLIC_INTERFACE_NAME=p1p1
+NETWORK_NETMASK_PUBLIC_INTERFACE=255.255.255.0
+NETWORK_NETWORK_PUBLIC_INTERFACE=192.168.4.0
+NETWORK_BROADCAST_PUBLIC_INTERFACE=192.168.4.255
+NETWORK_GATEWAY_PUBLIC_INTERFACE=192.168.4.1
+
+NETWORK_PRIVATE_INTERFACE_NAME=p1p2
+NETWORK_NETMASK_PRIVATE_INTERFACE=255.255.255.0
+NETWORK_NETWORK_PRIVATE_INTERFACE=192.168.100.0
+NETWORK_BROADCAST_PRIVATE_INTERFACE=192.168.100.255
+NETWORK_GATEWAY_PRIVATE_INTERFACE=192.168.100.1
+
+NETWORK_EXTERNAL_INTERFACE_NAME=eth2
+
+DATABASE_PASSWORD=welcome
+RABBIT_PASS=welcome
 KEYSTONE_DBPASS=welcome
-DEMO_PASS=
-ADMIN_PASS=
-GLANCE_DBPASS=
-GLANCE_PASS=
-NOVA_DBPASS=
-NOVA_PASS=
-DASH_DBPASS=
-CINDER_DBPASS=
-CINDER_PASS=
-NEUTRON_DBPASS=
-NEUTRON_PASS=
-HEAT_DBPASS=
-HEAT_PASS=
-CEILOMETER_DBPASS=
-CEILOMETER_PASS=
-TROVE_DBPASS=
-TROVE_PASS=
+DEMO_PASS=welcome
+ADMIN_PASS=welcome
+GLANCE_DBPASS=welcome
+GLANCE_PASS=welcome
+NOVA_DBPASS=welcome
+NOVA_PASS=welcome
+DASH_DBPASS=welcome
+CINDER_DBPASS=welcome
+CINDER_PASS=welcome
+NEUTRON_DBPASS=welcome
+NEUTRON_PASS=welcome
+HEAT_DBPASS=welcome
+HEAT_PASS=welcome
+CEILOMETER_DBPASS=welcome
+CEILOMETER_PASS=welcome
+TROVE_DBPASS=welcome
+TROVE_PASS=welcome
