--- a/autostack/autostack.properties
+++ b/autostack/autostack.properties
@@ -6,23 +6,32 @@
 
 
 
-ACCOUNT_USERNAME=rishi
-ACCOUNT_PASSWORD=9934
+ACCOUNT_USERNAME=autostack
+ACCOUNT_PASSWORD=autostack
+ADMIN_EMAIL_ADDRESS=rishi@cliqr.com
+DEMO_EMAIL_ADDRESS=soumil@cliqr.com
+OS_PASSWORD=autostack
 
 NAMESERVER_IP=192.168.4.1
 
-CONTROLLER_NODE_HOSTNAME=controller101
-CONTROLLER_NODE_PUBLIC_IP=192.168.4.190
-CONTROLLER_NODE_PRIVATE_IP=192.168.100.190
+CONTROLLER_NODE_HOSTNAME=controller10
+CONTROLLER_NODE_PUBLIC_IP=192.168.4.201
+CONTROLLER_NODE_PRIVATE_IP=192.168.100.201
 
-NETWORK_NODE_HOSTNAME=network101
-NETWORK_NODE_PUBLIC_IP=192.168.4.191
-NETWORK_NODE_PRIVATE_IP=192.168.100.191
+NETWORK_NODE_HOSTNAME=network100
+NETWORK_NODE_PUBLIC_IP=192.168.4.202
+NETWORK_NODE_PRIVATE_IP=192.168.100.202
 
-COMPUTE_NODE_HOSTNAME=compute101
-COMPUTE_NODE_PUBLIC_IP=192.168.4.192
-COMPUTE_NODE_PRIVATE_IP=192.168.100.192
+COMPUTE_NODE_HOSTNAME=compute100
+COMPUTE_NODE_PUBLIC_IP=192.168.4.204
+COMPUTE_NODE_PRIVATE_IP=192.168.100.204
 
+FLOATING_IP_START=192.168.4.210
+FLOATING_IP_END=192.168.4.230
+EXTERNAL_NETWORK_GATEWAY=192.168.4.1
+EXTERNAL_NETWORK_CIDR=192.168.4.210/24
+TENANT_NETWORK_GATEWAY=10.25.0.1
+TENANT_NETWORK_CIDR=10.25.0.1/24
 
 NETWORK_PUBLIC_INTERFACE_NAME=p1p1
 NETWORK_NETMASK_PUBLIC_INTERFACE=255.255.255.0
@@ -36,7 +45,7 @@ NETWORK_NETWORK_PRIVATE_INTERFACE=192.168.100.0
 NETWORK_BROADCAST_PRIVATE_INTERFACE=192.168.100.255
 NETWORK_GATEWAY_PRIVATE_INTERFACE=192.168.100.1
 
-NETWORK_EXTERNAL_INTERFACE_NAME=eth2
+NETWORK_EXTERNAL_INTERFACE_NAME=p2p1
 
 DATABASE_PASSWORD=welcome
 RABBIT_PASS=welcome
