--- a/autostack/conf/controller/network_nova/nova.conf
+++ b/autostack/conf/controller/network_nova/nova.conf
@@ -56,7 +56,7 @@ url = http://CONTROLLER_NODE_HOSTNAME:9696
 auth_strategy = keystone
 admin_auth_url = http://CONTROLLER_NODE_HOSTNAME:35357/v2.0
 admin_tenant_name = service
-admin_username = NEUTRON_PASS
-admin_password = welcome
+admin_username = neutron
+admin_password = NEUTRON_PASS
 
 
