--- a/autostack/conf/controller/network_nova/netwotk_network_nova/nova.conf
+++ b/autostack/conf/controller/network_nova/netwotk_network_nova/nova.conf
@@ -60,4 +60,4 @@ admin_username = neutron
 admin_password = NEUTRON_PASS
 
 service_metadata_proxy = True
-metadata_proxy_shared_secret = METADATA_PROXY_SHARED_SECRET
+metadata_proxy_shared_secret = METADATA_SECRET
