--- a/autostack/scripts/controller/autostack.properties
+++ b/autostack/scripts/controller/autostack.properties
@@ -30,6 +30,13 @@ NETWORK_NETWORK_PUBLIC_INTERFACE=192.168.4.0
 NETWORK_BROADCAST_PUBLIC_INTERFACE=192.168.4.255
 NETWORK_GATEWAY_PUBLIC_INTERFACE=192.168.4.1
 
+FLOATING_IP_START=192.168.4.210
+FLOATING_IP_END=192.168.4.230
+EXTERNAL_NETWORK_GATEWAY=192.168.4.1
+EXTERNAL_NETWORK_CIDR=192.168.4.210/24
+TENANT_NETWORK_GATEWAY=10.25.0.1
+TENANT_NETWORK_CIDR=10.25.0.1/24
+
 NETWORK_PRIVATE_INTERFACE_NAME=p1p2
 NETWORK_NETMASK_PRIVATE_INTERFACE=255.255.255.0
 NETWORK_NETWORK_PRIVATE_INTERFACE=192.168.100.0
